@@ -225,16 +225,19 @@ static void Host_Map_f (void)
 	if (Cmd_Argc() < 2)	//no map name given
 	{
 		Con_Printf ("map <levelname>: start a new server\n");
-		if (cls.state == ca_dedicated)
+		if (cls.state == ca_disconnected)
+			return;
+		if (cls.state == ca_connected)
 		{
-			if (sv.active)
-				Con_Printf ("Currently on: %s\n", sv.name);
-			else
-				Con_Printf ("Server not active\n");
+			Con_Printf ("Current level: %s [ %s ]\n",
+					cl.levelname, cl.mapname);
+			return;
 		}
-		else if (cls.state == ca_connected)
+		// (cls.state == ca_dedicated)
+		if (sv.active)
 		{
-			Con_Printf ("Currently on: %s ( %s )\n", cl.levelname, cl.mapname);
+			Con_Printf ("Current level: %s [ %s ]\n",
+					SV_GetLevelname(), sv.name);
 		}
 		return;
 	}
@@ -475,22 +478,24 @@ static void Host_SavegameComment (char *text)
 {
 	size_t		i;
 	char		temp[20];
+	const char	*levelname;
 	struct tm	*tblock;
-	time_t		TempTime;
+	time_t		temptime;
 
 	for (i = 0; i < SAVEGAME_COMMENT_LENGTH; i++)
 	{
 		text[i] = ' ';
 	}
 
-// see SAVEGAME_COMMENT_LENGTH definition in quakedef.h !
-	i = strlen(cl.levelname);
+/* see SAVEGAME_COMMENT_LENGTH definition in quakedef.h */
+	levelname = SV_GetLevelname ();
+	i = strlen(levelname);
 	if (i > 20)
 		i = 20;
-	memcpy (text, cl.levelname, i);
+	memcpy (text, levelname, i);
 
-	TempTime = time(NULL);
-	tblock = localtime(&TempTime);
+	temptime = time(NULL);
+	tblock = localtime(&temptime);
 	strftime (temp, sizeof(temp), "%m/%d/%Y %H:%M", tblock);
 	i = strlen(temp);
 	if (i >= SAVEGAME_COMMENT_LENGTH-21)
