@@ -4,6 +4,16 @@ Development Progress	:
 ---------------------------
 
 2011-07-10 (SVN):
+    * hexen2/sv_main.c, hexenworld/server/sv_init.c: Refactored the code
+      returning the full level name into new SV_GetLevelname() procedure.
+    * server.h: Added prototype for SV_GetLevelname().
+    * hexen2/host_cmd.c (Host_Map_f): Use SV_GetLevelname().
+    * hexen2/host_cmd.c (Host_SavegameComment): Likewise.
+    * hexen2/sv_main.c (SV_SendServerinfo): Likewise.
+    * hexenworld/server/sv_ccmds.c (SV_Map_f): Likewise.
+    * hexenworld/server/sv_user.c (SV_New_f): Likewise.
+
+2011-07-10 (SVN):
     * README: updated web links.
 
 2011-07-07 (SVN):
